# LB_Calc

./: .gitignore  Cargo.toml  FormatInfo.txt  LICENSE.txt  README.md
engine/src/: ast.rs  lib.rs  parser.rs  properties.rs  truth_table.rs
src/: actions.rs  app.rs  main.rs  tui.rs
src/components/: btn_comp.rs  entry_comp.rs  mod.rs  props_comp.rs  table.rs  table_comp.rs
src/event/: event.rs  key.rs  mod.rs
