[package]
name = "log_calc_cli"
version = "0.1.0"
authors = ["りnk4t"]
edition = "2024"
license = "MIT"
readme = "README.md"

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6.5"
crossterm = {version = "0.29.0"}
tokio = {version = "1.52.3", features = ["full"]}
futures = "0.3.31"
async-trait = "0.1.89"
engine = {path = "engine"}